<resources>

    <string name="app_name">My App</string>

    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 points</string>
    <string name="label_add3">+3 points</string>
    <string name="but_reset_label">Reset</string>


    <string name="btn_dollar">dollar</string>
    <string name="btn_euro">euro</string>
    <string name="btn_won">won</string>
    <string name="input_hint">input_RMB</string>
    <string name="btn_opencfg_label">config</string>

    <string name="btn_save_label">Save</string>
</resources>
